--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -594,7 +594,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final = df_final.drop(columns = ['Country','pop_est','iso_a3','gdp_md_est','geometry','name','Year'])"
+        "df_final = df_final.drop(columns = ['Country','pop_est','iso_a3','gdp_md_est','geometry','name','Year','Energy_intensity_per_capita','Energy_intensity_by_GDP ' ])"
       ],
       "metadata": {
         "id": "xun9htOCLHMQ"
@@ -639,6 +639,36 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install category_encoders"
+      ],
+      "metadata": {
+        "id": "2SGOEq0HD55b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from category_encoders import TargetEncoder\n",
+        "from category_encoders import OrdinalEncoder\n",
+        "from category_encoders import OneHotEncoder\n",
+        "from xgboost import XGBRegressor\n",
+        "from sklearn import metrics \n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.impute import SimpleImputer\n",
+        "from sklearn.linear_model import LinearRegression,Ridge,Lasso,ElasticNet"
+      ],
+      "metadata": {
+        "id": "xmVwhKSiEAD_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_dum = pd.get_dummies(df_final,columns=['Energy_type'])"
       ],
       "metadata": {
@@ -663,7 +693,7 @@
       "source": [
         "# 더미 코딩\n",
         "model_dum = LinearRegression()\n",
-        "model_dum.fit(df_dum[['Energy_type_coal',\t'Energy_type_natural_gas',\t'Energy_type_nuclear',\t'Energy_type_petroleum_n_other_liquids',\t'Energy_type_renewables_n_other']], df_dum['CO2_emission'])\n",
+        "model_dum.fit(df_dum[['Energy_consumption','Energy_production','GDP','Population','Energy_intensity_per_capita','Energy_intensity_by_GDP','Total_use','Energy_type_coal',\t'Energy_type_natural_gas',\t'Energy_type_nuclear',\t'Energy_type_petroleum_n_other_liquids',\t'Energy_type_renewables_n_other']], df_dum['CO2_emission'])\n",
         "print(\"coefficient: \", model_dum.coef_)\n",
         "print(\"intercept: \", model_dum.intercept_)"
       ],
@@ -693,7 +723,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#df_dum = df_dum.drop(columns = [\"continent\"])"
+        "df_dum = df_dum.drop(columns = [\"continent\"])"
       ],
       "metadata": {
         "id": "FTnVfGFJ7z7T"
@@ -918,36 +948,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install category_encoders"
-      ],
-      "metadata": {
-        "id": "4YbqTxjrHf85"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from category_encoders import TargetEncoder\n",
-        "from category_encoders import OrdinalEncoder\n",
-        "from category_encoders import OneHotEncoder\n",
-        "from xgboost import XGBRegressor\n",
-        "from sklearn import metrics \n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.pipeline import make_pipeline\n",
-        "from sklearn.impute import SimpleImputer\n",
-        "from sklearn.linear_model import LinearRegression,Ridge,Lasso,ElasticNet"
-      ],
-      "metadata": {
-        "id": "mMj_eHwEU4oP"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "pipe = make_pipeline(OrdinalEncoder(), SimpleImputer(),XGBRegressor(booster = 'gbtree',\n",
         "    learning_rate =0.1,\n",
         "    n_estimators=1000,\n",
@@ -1121,19 +1121,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [
-        "encoder = OrdinalEncoder()\n",
-        "X_train_encoded = encoder.fit_transform(X_train_selected)\n",
-        "X_val_encoded = encoder.transform(X_val_selected)"
-      ],
-      "metadata": {
-        "id": "UQxuCdi2jigr"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "순열중요도를 통해서 특성을 확인하였지만 제가 원하는 것은 인구수 / GDP / 발전원료에 따른 Co2의 변화였기 때문에 기존 피쳐를 가지고 시각화를 진행하였습니다."
@@ -1191,11 +1178,11 @@
         "gscv_rid = GridSearchCV (estimator = rid, param_grid = param_rid, scoring ='r2', cv = 3, refit=True, n_jobs=1, verbose=2)\n",
         "gscv_las = GridSearchCV (estimator = las, param_grid = param_las, scoring ='r2', cv = 3, refit=True, n_jobs=1, verbose=2)\n",
         "gscv_ela = GridSearchCV (estimator = ela, param_grid = param_ela, scoring ='r2', cv = 3, refit=True, n_jobs=1, verbose=2)\n",
-        "gscv_xgb.fit(X_train_encoded,y_train)\n",
-        "gscv_ols.fit(X_train_encoded,y_train)\n",
-        "gscv_rid.fit(X_train_encoded,y_train)\n",
-        "gscv_las.fit(X_train_encoded,y_train)\n",
-        "gscv_ela.fit(X_train_encoded,y_train)"
+        "gscv_xgb.fit(X_train_selected,y_train)\n",
+        "gscv_ols.fit(X_train_selected,y_train)\n",
+        "gscv_rid.fit(X_train_selected,y_train)\n",
+        "gscv_las.fit(X_train_selected,y_train)\n",
+        "gscv_ela.fit(X_train_selected,y_train)"
       ],
       "metadata": {
         "id": "2EjWqi-r5D3o"
@@ -1230,9 +1217,272 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from category_encoders import OrdinalEncoder\n",
+        "from sklearn.metrics import r2_score\n",
+        "from xgboost import XGBRegressor\n",
+        "\n",
+        "encoder = OrdinalEncoder()\n",
+        "X_train_encoded = encoder.fit_transform(X_train)\n",
+        "X_val_encoded = encoder.transform(X_val)\n",
+        "\n",
+        "boosting = XGBRegressor(\n",
+        "    n_estimators=1000,\n",
+        "    objective='reg:squarederror', # default\n",
+        "    learning_rate=0.2,\n",
+        "    n_jobs=-1\n",
+        ")\n",
+        "\n",
+        "eval_set = [(X_train_encoded, y_train), \n",
+        "            (X_val_encoded, y_val)]\n",
+        "\n",
+        "boosting.fit(X_train_encoded, y_train, \n",
+        "          eval_set=eval_set,\n",
+        "          early_stopping_rounds=50\n",
+        "         )"
+      ],
+      "metadata": {
+        "id": "QosxzID7FxiC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = boosting.predict(X_val_encoded)\n",
+        "print('R^2', r2_score(y_val, y_pred))"
+      ],
+      "metadata": {
+        "id": "o6oseF-IHaNL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pdpbox"
+      ],
+      "metadata": {
+        "id": "50J5WnVmIKRc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pdpbox.pdp import pdp_isolate, pdp_plot\n",
+        "\n",
+        "feature = 'GDP'"
+      ],
+      "metadata": {
+        "id": "aT9MrDK8Higc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_val.head()"
+      ],
+      "metadata": {
+        "id": "cUvh-31HIsqA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "isolated = pdp_isolate(\n",
+        "    model=model_dum, \n",
+        "    dataset=X_val, \n",
+        "    model_features=X_val.columns, \n",
+        "    feature=feature,\n",
+        "    grid_type='percentile', # default='percentile', or 'equal'\n",
+        "    num_grid_points=12 # default=10\n",
+        ")\n",
+        "pdp_plot(isolated, feature_name=feature);"
+      ],
+      "metadata": {
+        "id": "5fHHdjJqIVCq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pdpbox.pdp import pdp_interact, pdp_interact_plot"
+      ],
+      "metadata": {
+        "id": "M4U2MtoyKfSd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features = ['Energy_consumption', 'Energy_production']\n",
+        "\n",
+        "interaction = pdp_interact(\n",
+        "    model=boosting, \n",
+        "    dataset=X_val_encoded,\n",
+        "    model_features=X_val.columns, \n",
+        "    features=features\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "747VIEerKicF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdp_interact_plot(interaction, plot_type='grid', \n",
+        "                  feature_names=features);"
+      ],
+      "metadata": {
+        "id": "a2bB0vdHKsfv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import randint, uniform\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "param_distributions = { \n",
+        "    'n_estimators': randint(50, 500), \n",
+        "    'max_depth': [5, 10, 15, 20, None], \n",
+        "    'max_features': uniform(0, 1), \n",
+        "}\n",
+        "\n",
+        "search = RandomizedSearchCV(\n",
+        "    RandomForestRegressor(random_state=2), \n",
+        "    param_distributions=param_distributions, \n",
+        "    n_iter=5, \n",
+        "    cv=3, \n",
+        "    scoring='neg_mean_absolute_error', \n",
+        "    verbose=10, \n",
+        "    return_train_score=True, \n",
+        "    n_jobs=-1, \n",
+        "    random_state=2\n",
+        ")\n",
+        "\n",
+        "search.fit(X_train, y_train);"
+      ],
+      "metadata": {
+        "id": "SFHlouTJLC-i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('최적 하이퍼파라미터: ', search.best_params_)\n",
+        "print('CV MAE: ', -search.best_score_)\n",
+        "model = search.best_estimator_"
+      ],
+      "metadata": {
+        "id": "mfuFcq8YLI60"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "row = X_test.iloc[[1]]\n",
+        "row"
+      ],
+      "metadata": {
+        "id": "trVnkimNLUUb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install shap"
+      ],
+      "metadata": {
+        "id": "X2ziUWIZLrem"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import shap\n",
+        "\n",
+        "explainer = shap.TreeExplainer(model)\n",
+        "shap_values = explainer.shap_values(row)\n",
+        "\n",
+        "shap.initjs()\n",
+        "shap.force_plot(\n",
+        "    base_value=explainer.expected_value, \n",
+        "    shap_values=shap_values,\n",
+        "    features=row\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "wXWq_4VCLWje"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shap_values = explainer.shap_values(X_test.iloc[:300])\n",
+        "shap.summary_plot(shap_values, X_test.iloc[:300])"
+      ],
+      "metadata": {
+        "id": "n6hWISTrNcZ2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shap.summary_plot(shap_values, X_test.iloc[:100], plot_type=\"violin\")"
+      ],
+      "metadata": {
+        "id": "KPahLxtcNvIg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "shap.summary_plot(shap_values, X_test.iloc[:100], plot_type=\"bar\")"
+      ],
+      "metadata": {
+        "id": "5yKd_kXDN5PE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "PDP와 Shap를 이용하여 특성간의 관계를 조금 더 깔끔하게 표현하고자 하였는데 데이터정리하는데 무슨 문제가 있었는지 둘 다 표현이 되지 않는다"
+        "인구수나 GDP가 높으면 CO2의 배출량에 큰 영향을 줄거라고 예상을 하였는데 막상 결과값이 나오는 걸 보니 생각한것만큼 큰 영향을 끼치지는 않았다. 예상한대로 발전에 사용되는 원료에서는 화력발전이 가장 큰 영향을 끼친다는 것을 확인하였다."
       ],
       "metadata": {
         "id": "R6AM2IT7B5Z-"
