--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -90,32 +90,10 @@
     {
       "cell_type": "code",
       "source": [
-        "energy.head()"
-      ],
-      "metadata": {
-        "id": "jSdvzgMg1Exl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "df_e = energy_copy.drop('Unnamed: 0', axis =1).reset_index(drop=True)"
       ],
       "metadata": {
         "id": "3LI5Hl3f6JCJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_e.dropna(inplace = True)"
-      ],
-      "metadata": {
-        "id": "enTeaAFD1Kvs"
       },
       "execution_count": null,
       "outputs": []
@@ -134,10 +112,32 @@
     {
       "cell_type": "code",
       "source": [
+        "df_e.dropna(inplace = True)"
+      ],
+      "metadata": {
+        "id": "X4VkUaKFoov0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_e.info()"
       ],
       "metadata": {
         "id": "0l36O_svKMFy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_e.nunique()"
+      ],
+      "metadata": {
+        "id": "k6_1ZBYclHmu"
       },
       "execution_count": null,
       "outputs": []
@@ -160,17 +160,6 @@
       ],
       "metadata": {
         "id": "TpaSCQyd-ORt"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df_e.info()"
-      ],
-      "metadata": {
-        "id": "9enWM7uVcEBJ"
       },
       "execution_count": null,
       "outputs": []
@@ -224,7 +213,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final['Total_use'] = df_final[\"Energy_production\"]-df_final['Energy_consumption']"
+        "df_final['Total_use'] = df_final['Energy_consumption']-df_final[\"Energy_production\"]"
       ],
       "metadata": {
         "id": "zSXpcmRDvI5C"
@@ -521,7 +510,8 @@
       "cell_type": "code",
       "source": [
         "df_2 = df_final.groupby(['Energy_type','continent'])['Energy_production'].sum().unstack()\n",
-        "df_3 = df_final.groupby(['Energy_type','continent'])['Energy_consumption'].sum().unstack()"
+        "df_3 = df_final.groupby(['Energy_type','continent'])['Energy_consumption'].sum().unstack()\n",
+        "df_4 = df_final.groupby(['Energy_type','continent'])['CO2_emission'].sum().unstack()"
       ],
       "metadata": {
         "id": "nDUw1A4hw9oG"
@@ -560,6 +550,20 @@
     {
       "cell_type": "code",
       "source": [
+        "plt.figure(figsize=(15, 7))\n",
+        "plt.title('CO2_emission by type', fontsize=15)\n",
+        "plt.ylabel('CO2_emission')\n",
+        "sns.lineplot(data=df_4, marker='o', linewidth=3)"
+      ],
+      "metadata": {
+        "id": "P8kJeq6ysG0X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "df_4 = df_final.groupby(['Energy_type','continent'])['CO2_emission'].sum().unstack()"
       ],
       "metadata": {
@@ -572,8 +576,8 @@
       "cell_type": "code",
       "source": [
         "plt.figure(figsize=(15, 7))\n",
-        "plt.title('CO2_emiision by type', fontsize=15)\n",
-        "plt.ylabel('CO2_emiision')\n",
+        "plt.title('CO2_emission by type', fontsize=15)\n",
+        "plt.ylabel('CO2_emission')\n",
         "sns.lineplot(data=df_4, marker='o', linewidth=3)"
       ],
       "metadata": {
@@ -594,7 +598,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df_final = df_final.drop(columns = ['Country','pop_est','iso_a3','gdp_md_est','geometry','name','Year','Energy_intensity_per_capita','Energy_intensity_by_GDP ' ])"
+        "df_final = df_final.drop(columns = ['Country','pop_est','iso_a3','gdp_md_est','geometry','name','Year','Energy_intensity_per_capita','Energy_intensity_by_GDP' ])"
       ],
       "metadata": {
         "id": "xun9htOCLHMQ"
@@ -693,7 +697,7 @@
       "source": [
         "# 더미 코딩\n",
         "model_dum = LinearRegression()\n",
-        "model_dum.fit(df_dum[['Energy_consumption','Energy_production','GDP','Population','Energy_intensity_per_capita','Energy_intensity_by_GDP','Total_use','Energy_type_coal',\t'Energy_type_natural_gas',\t'Energy_type_nuclear',\t'Energy_type_petroleum_n_other_liquids',\t'Energy_type_renewables_n_other']], df_dum['CO2_emission'])\n",
+        "model_dum.fit(df_dum[['Energy_consumption','Energy_production','GDP','Population','Total_use','Energy_type_coal',\t'Energy_type_natural_gas',\t'Energy_type_nuclear',\t'Energy_type_petroleum_n_other_liquids',\t'Energy_type_renewables_n_other']], df_dum['CO2_emission'])\n",
         "print(\"coefficient: \", model_dum.coef_)\n",
         "print(\"intercept: \", model_dum.intercept_)"
       ],
@@ -1460,7 +1464,7 @@
     {
       "cell_type": "code",
       "source": [
-        "shap.summary_plot(shap_values, X_test.iloc[:100], plot_type=\"violin\")"
+        "shap.summary_plot(shap_values, X_test.iloc[:300], plot_type=\"violin\")"
       ],
       "metadata": {
         "id": "KPahLxtcNvIg"
@@ -1471,7 +1475,7 @@
     {
       "cell_type": "code",
       "source": [
-        "shap.summary_plot(shap_values, X_test.iloc[:100], plot_type=\"bar\")"
+        "shap.summary_plot(shap_values, X_test.iloc[:300], plot_type=\"bar\")"
       ],
       "metadata": {
         "id": "5yKd_kXDN5PE"
